# corekit

./: .gitignore  CMakeLists.txt  README.md
3party/: README.md
build_core/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  corekit.sln  corekit.vcxproj  corekit.vcxproj.filters  corekitConfig.cmake  corekit_example.vcxproj  corekit_example.vcxproj.filters  interface_tests.vcxproj  interface_tests.vcxproj.filters  ipc_client_example.vcxproj  ipc_client_example.vcxproj.filters  ipc_server_example.vcxproj  ipc_server_example.vcxproj.filters  logkit_tests.vcxproj  logkit_tests.vcxproj.filters
build_core/Release/: corekit.exp  corekit.lib
build_core/Testing/Temporary/: CTestCostData.txt
build_core/config/: logging.conf
build_core/corekit.dir/Release/corekit.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  corekit.write.1u.tlog  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build_core/corekit_example.dir/Release/corekit_example.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  corekit_example.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build_core/interface_tests.dir/Release/interface_tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build_core/ipc_client_example.dir/Release/ipc_clie.98AF1B81.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build_core/ipc_server_example.dir/Release/ipc_serv.DAFC3D2A.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build_core/logkit_tests.dir/Release/logkit_tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build_core/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
cmake/: corekitConfig.cmake.in  sim_toolkitConfig.cmake.in
config/: corekit.json  logging.conf
docs/: memory-backend-vs2015.md
docs/api/: api_contract.md  phase1_interface_freeze.md
docs/benchmark/: industry_matrix.md
docs/design/: architecture.md  container_extension.md  decision_log.md  ipc_design.md  ipc_redis_inspired_design.md  memory_allocator_upgrade_2026-02-13.md  phase2_design_freeze.md  phase3_implementation_report.md
docs/design/diagrams/: architecture.puml  executor_sequence.puml  ipc_sequence.puml
examples/: containers_demo.cpp  ipc_client.cpp  ipc_server.cpp  logging_demo.cpp  main.cpp  memory_demo.cpp  memory_pool_demo.cpp  quick_start.cpp  task_demo.cpp
include/corekit/: corekit.hpp
include/corekit/api/: export.hpp  factory.hpp  i_component.hpp  status.hpp  unique_handle.hpp  version.hpp
include/corekit/concurrent/: basic_map.hpp  basic_queue.hpp  containers.hpp  i_map.hpp  i_queue.hpp  i_ring_buffer.hpp  i_set.hpp  moodycamel_queue.hpp
include/corekit/io/: i_file.hpp
include/corekit/ipc/: i_channel.hpp
include/corekit/json/: i_json.hpp
include/corekit/legacy/: log_manager_legacy.hpp
include/corekit/log/: ilog_manager.hpp  log_macros.hpp  log_types.hpp
include/corekit/memory/: basic_object_pool.hpp  i_global_allocator.hpp  i_memory_pool.hpp  i_object_pool.hpp  iallocator.hpp  system_pool.hpp
include/corekit/task/: executor_helpers.hpp  i_task_graph.hpp  iexecutor.hpp
include/corekit/xml/: i_xml_doc.hpp
include/liblogkit/: liblogkit.hpp
include/liblogkit/api/: export.hpp  factory.hpp  status.hpp  version.hpp
include/liblogkit/concurrent/: i_map.hpp  i_queue.hpp
include/liblogkit/ipc/: i_channel.hpp
include/liblogkit/log/: ilog_manager.hpp  log_types.hpp
include/liblogkit/memory/: i_object_pool.hpp  iallocator.hpp
include/liblogkit/task/: i_task_graph.hpp  iexecutor.hpp
include/logkit/: log_manager.hpp
scripts/: vendor-deps.sh
src/: log_manager.cpp
src/api/: c_api.cpp  status.cpp
src/concurrent/: basic_map_impl.hpp  basic_queue_impl.hpp  basic_ring_buffer_impl.hpp  basic_set_impl.hpp  moodycamel_queue_impl.hpp
src/io/: file_impl.hpp  file_utils.cpp
src/ipc/: shared_memory_channel.cpp  shared_memory_channel.hpp  shm_backend.hpp  shm_backend_posix.cpp  shm_backend_win32.cpp
src/json/: json_codec.cpp
src/log/: glog_log_manager.hpp  log_manager_adapter.cpp  log_manager_adapter.hpp  log_manager_legacy_internal.hpp
src/memory/: basic_object_pool_impl.hpp  global_allocator.cpp  global_stl_allocator.hpp  mimalloc_allocator.cpp  mimalloc_allocator.hpp  slab_pool_impl.hpp  system_allocator.cpp  system_allocator.hpp  system_pool.cpp  tbb_allocator.cpp  tbb_allocator.hpp
src/task/: simple_task_graph.cpp  simple_task_graph.hpp  thread_pool_executor.cpp  thread_pool_executor.hpp
src/xml/: tinyxml2_doc_impl.cpp  tinyxml2_doc_impl.hpp
tests/: corekit_legacy_tests.cpp  interface_tests.cpp  ipc_tests.cpp  logkit_tests.cpp  memory_perf_compare.cpp  xml_tests.cpp
